--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,536 @@
-body {
-  font: 100.01% Verdana, Arial, Helvetica, sans-serif;
-  width:100%;
-  margin: 0 auto;
+
+/*--------------------------Basic-Page--------------------------------*/
+
+html, body, #app {
+  height: 100%;
+  overflow-y: hidden;
 }
 
-* {
-  margin:0;
-  padding:0;
+.app{
+  background: #eee;
 }
 
-#header {
-  padding: 20px;
-  background-color: #013ADF;
-  border-color: #FF9F00;
-  border-width: 15px;
-  border-style: groove;
+#content
+{
+  width: 100%;
+  height: 100%;
+  /*padding-bottom: 100px;*/
+  overflow-y:scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
-#nav {
-  margin-top: 5px;
+/*Navbar*/
+.navbar-wrapper{
+  width: 100%;
+  height: 40px;
+  margin-bottom: 0px;
+  background: #212124;
+  color: rgb(248,248,255);
+}
+
+.navbar-button{
+  height: 40px;
+  width: 120px;
+  color: rgb(248,248,255);
+  font-size: 16px;
+  font-weight: 100;
+  display: table;
+  border-right: solid 1px rgb(50,50,50);
+  border-left: solid 1px rgb(50,50,50);
+  padding: 5px;
+  z-index: 5;
+}
+
+.navbar-button-brand{
+  height: 40px;
+  width: 90px;
+  display: table;
+  padding: 2px;
+}
+
+.brand{
+  /*height: 100%;*/
+  height: 25px;
+  margin: 5px;
+  /*z-index: -5;*/
+}
+
+.navbar-button-float-left{
   float: left;
-  width:250px;
-  background-color: #013ADF;
-  border-color: #FF9F00;
-  border-width: 10px;
-  border-style: outset;
 }
 
-#section {
+.navbar-button-float-right{
+  float: right;
+}
+
+.navbar-left-out{
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
+.navbar-center{
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.navbar-top-content{
+  margin-right: 0px;
+}
+
+.lang-op{
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+@media(max-width: 400px) {
+  .lang-op{
+    margin: 0px;
+    width: 0px;
+  }
+}
+
+@media(max-width: 400px) {
+  .navbar-button{
+    height: 40px;
+    width: 55px;
+    color: rgb(248,248,255);
+    font-size: 16px;
+    font-weight: 100;
+    display: table;
+    border-right: solid 1px rgb(50,50,50);
+    border-left: solid 1px rgb(50,50,50);
+    padding: 5px;
+    z-index: 5;
+  }
+}
+
+@media(max-width: 350px) {
+  .navbar-button{
+    height: 40px;
+    width: 50px;
+    color: rgb(248,248,255);
+    font-size: 16px;
+    font-weight: 100;
+    display: table;
+    border-right: solid 1px rgb(50,50,50);
+    border-left: solid 1px rgb(50,50,50);
+    padding: 5px;
+    padding-right: 2px;
+    padding-left: 2px;
+    z-index: 5;
+  }
+  .navbar-button-brand{
+    height: 30px;
+    width: 80px;
+    display: table;
+    padding: 2px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
+@media(min-width: 640px) {
+  .navbar-top-content{
+    width: 640px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media(min-width: 800px) {
+  .navbar-top-content{
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+}
+
+@media(min-width: 1150px) {
+  .navbar-top-content{
+    width: 700px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+.navbar-right-out{
+  position: fixed;
+  right: 0;
+  top: 0;
+}
+
+.navbar-button-text{
+  vertical-align: middle;
+  display: table-cell;
+}
+
+.test-left{
+  text-align: left;
+}
+
+.test-right{
+  text-align: right;
+}
+
+div.navbar-button:hover , .lang-op:hover{
+  text-decoration: none;
+  color: #fff;
+  background: rgba(255,255,255,0.2);
+}
+
+.text{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+/* Sidebar Wrapper */
+
+#sidebar-wrapper {
+  position: fixed;
+  padding-top: 20px;
+  height: 100%;
+  overflow-y: auto;
+  background: #ddd;
+  width: 0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#sidebar-wrapper-right {
+  position: fixed;
+  padding-top: 20px;
+  right: 0;
+  float: right;
+
+  height: 100%;
+  overflow-y: auto;
+  width: 0;
+  background: #ddd;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.sidebar-nav li {
+  text-indent: 20px;
+  line-height: 40px;
+}
+
+/*.sidebar-right li{
+    float: right;
+}*/
+
+.sidebar-nav li a {
+  display: block;
+  text-decoration: none;
+  color: #999999;
+}
+
+.sidebar-nav li a:hover {
+  text-decoration: none;
+  color: #fff;
+  background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none;
+}
+
+@media(min-width: 640px) {
+  #content
+  {
+    width: 640px;
+    margin-right: auto;
+    margin-left: auto;
+    overflow-y:scroll;
+  }
+}
+
+@media(min-width: 800px) {
+  #wrapper.toggled {
+    padding-left: 0;
+  }
+
+  #sidebar-wrapper {
+    width: 18%;
+    margin-right: 20px;
+  }
+
+  #sidebar-wrapper-right {
+    float: right;
+    width: 18%;
+    /*margin-left: 20px;*/
+  }
+
+  #wrapper.toggled #sidebar-wrapper {
+    width: 0;
+  }
+  #content
+  {
+    margin-left: 20%;
+    margin-right: 20%;
+    width: auto;
+    overflow-y:scroll;
+  }
+}
+
+@media(min-width:1145px) {
+
+  #wrapper.toggled {
+    padding-left: 0;
+  }
+
+  #sidebar-wrapper {
+    width: 207px;
+  }
+
+  #sidebar-wrapper-right {
+    float: right;
+    width: 207px;
+    margin-left: 20px
+  }
+
+  #wrapper.toggled #sidebar-wrapper {
+    width: 0;
+  }
+  #content
+  {
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+    overflow-y:scroll;
+  }
+}
+
+/*Footer*/
+.wrapper {
+  min-height: 100%;
+  padding-bottom: 155px;
+  margin-bottom: -155px;
+}
+.footer, .push {
+  height: 155px; /* .push must be the same height as .footer */
+  background: #ddd;
+}
+#copyright {
+  padding-top: 30px;
+}
+
+/*Hover Preview*/
+#preview{
+  position:absolute;
+  width: 300px;
+  border:1px solid #ccc;
+  background:#fff;
+  padding:5px;
+  display:none;
+  box-shadow: 0px 0px 5px #888;
+}
+
+/*-------------------End Basic-Page------------------------*/
+
+
+/*Text-Default-Form*/
+h1{
+  font-weight: 400;
+}
+
+h2{
+  font-weight: 300;
+}
+
+h3{
+  font-weight: 300;
+}
+
+.mainInformation{
+  font-weight: bold;
+  /*font-weight: 200;*/
+  color: rgb(0,0,0);
+}
+
+.subInformation{
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 200;
+  color: rgb(105,105,105);
+}
+
+.textParagraph{
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.text{
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 200;
+}
+
+.icon{
+  float: left;
+  height: 40px;
+  width: 40px;
+  margin: 10px;
+}
+
+.icon-right{
+  float: right;
+  height: 40px;
+  width: 40px;
+  margin: 10px;
+}
+
+.black-link{
+  color: rgb(0,0,0);
+}
+
+li.list-elm{
+  margin-left: 10px;
   margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+@media(max-width: 400px) {
+  h2{
+    font-weight: 400;
+    font-size: 20px;
+  }
+
+  .subtitle{
+    font-weight: 200;
+    font-size: 12px;
+  }
+}
+
+
+/*Posts*/
+.panel-post{
   padding: 20px;
 }
 
-.clock {
-  padding: 10px;
-  color: white;
+.postImage{
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-top: 10px;
+  width: 100%;
 }
 
-h1 {
-  color: white;
-  font-size: 28pt;
-  font-style: italic;
-  text-indent: 1,5em;
+.textImage{
+  border: dotted 2px #bbb;
+  margin: 20px;
 }
 
-h2 {
-  padding: 10px;
-  color: white;
-  font-size: 14pt;
-  font-style: oblique;
-  text-indent: 1em;
+@media(max-width: 400px) {
+  .panel-post{
+    padding: 10px;
+  }
 }
 
-h3 {
-  color: #013ADF;
-  font-size: 14pt;
-  font-style: oblique;
-  text-indent: 1em;
+/*User-Preview*/
+.panel-hello{
+  height: 200px;
+  padding-left: 20px;
 }
+
+.panel-hello-text{
+  position: relative;
+  padding-top: 10px;
+  height: 100%;
+  padding-left: 20px;
+}
+
+.imageMe{
+  float: right;
+  height: 230px
+}
+
+.imgCer{
+  width: 20px;
+  height: auto;
+}
+
+.collapseDetail{
+  margin-left: 30px;
+}
+
+#collapseUser{
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+
+.cursor_hand{
+  cursor:pointer;
+}
+
+.fullsize_div_as_link a{
+  display: block;
+  height:100%;
+}
+
+.panel-box-detail{
+  padding-left: 20px;
+  padding-right: 40px;
+}
+
+.panel-vertical-margin{
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+
+@media(max-width: 400px) {
+  .imageMe{
+    float: right;
+    width: 30%;
+    height: auto;
+  }
+
+  .panel-hello{
+    height: 200px;
+    padding-left: 10px;
+  }
+
+  .panel-hello-text{
+    position: relative;
+    padding-top: 5px;
+    height: 100%;
+    padding-left: 0px;
+  }
+
+  #collapseUser{
+    padding-left: 10px;
+    margin-bottom: 20px;
+  }
+
+  .panel-box-detail{
+    padding-left: 0px;
+    padding-right: 10px;
+  }
+}
+
+/*Impressum*/
+.impressumBrand{
+  float: right;
+  height: 50px
+}
+
+
+
+
+
+
