--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,6 @@ html, body, #app {
 {
   width: 100%;
   height: 100%;
-  /*padding-bottom: 100px;*/
-  overflow-y:scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 /*Navbar*/
@@ -24,43 +21,8 @@ html, body, #app {
   width: 100%;
   height: 40px;
   margin-bottom: 0px;
-  background: #212124;
+  background: #104e8b;
   color: rgb(248,248,255);
-}
-
-.navbar-button{
-  height: 40px;
-  width: 120px;
-  color: rgb(248,248,255);
-  font-size: 16px;
-  font-weight: 100;
-  display: table;
-  border-right: solid 1px rgb(50,50,50);
-  border-left: solid 1px rgb(50,50,50);
-  padding: 5px;
-  z-index: 5;
-}
-
-.navbar-button-brand{
-  height: 40px;
-  width: 90px;
-  display: table;
-  padding: 2px;
-}
-
-.brand{
-  /*height: 100%;*/
-  height: 25px;
-  margin: 5px;
-  /*z-index: -5;*/
-}
-
-.navbar-button-float-left{
-  float: left;
-}
-
-.navbar-button-float-right{
-  float: right;
 }
 
 .navbar-left-out{
@@ -79,107 +41,18 @@ html, body, #app {
   margin-right: 0px;
 }
 
-.lang-op{
-  margin-right: 20px;
-  margin-left: 20px;
-}
-
-@media(max-width: 400px) {
-  .lang-op{
-    margin: 0px;
-    width: 0px;
-  }
-}
-
-@media(max-width: 400px) {
-  .navbar-button{
-    height: 40px;
-    width: 55px;
-    color: rgb(248,248,255);
-    font-size: 16px;
-    font-weight: 100;
-    display: table;
-    border-right: solid 1px rgb(50,50,50);
-    border-left: solid 1px rgb(50,50,50);
-    padding: 5px;
-    z-index: 5;
-  }
-}
-
-@media(max-width: 350px) {
-  .navbar-button{
-    height: 40px;
-    width: 50px;
-    color: rgb(248,248,255);
-    font-size: 16px;
-    font-weight: 100;
-    display: table;
-    border-right: solid 1px rgb(50,50,50);
-    border-left: solid 1px rgb(50,50,50);
-    padding: 5px;
-    padding-right: 2px;
-    padding-left: 2px;
-    z-index: 5;
-  }
-  .navbar-button-brand{
-    height: 30px;
-    width: 80px;
-    display: table;
-    padding: 2px;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-}
-
-@media(min-width: 640px) {
-  .navbar-top-content{
-    width: 640px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
-
-@media(min-width: 800px) {
-  .navbar-top-content{
-    margin-left: 20%;
-    margin-right: 20%;
-  }
-}
-
-@media(min-width: 1150px) {
-  .navbar-top-content{
-    width: 700px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
-
 .navbar-right-out{
   position: fixed;
   right: 0;
   top: 0;
 }
 
-.navbar-button-text{
-  vertical-align: middle;
-  display: table-cell;
+.text {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
-.test-left{
-  text-align: left;
-}
-
-.test-right{
-  text-align: right;
-}
-
-div.navbar-button:hover , .lang-op:hover{
-  text-decoration: none;
-  color: #fff;
-  background: rgba(255,255,255,0.2);
-}
-
-.text{
+.clock{
   margin-top: auto;
   margin-bottom: auto;
 }
